@@ -291,9 +291,21 @@ catch(e)
 {throw"Error in evaluating '"+value+"' for attribute "+attribute+" for element "+element.id;}}
 else
 el.setAttribute(attribute,value);},setOptions:function(element,options)
-{var el=$(element);if(!el)return;if(el&&el.tagName.toLowerCase()=="select")
-{el.options.length=options.length;for(var i=0;i<options.length;i++)
-el.options[i]=new Option(options[i][0],options[i][1]);}},focus:function(element)
+{var el=$(element);if(!el)return;var previousGroup=null;var optGroup=null;if(el&&el.tagName.toLowerCase()=="select")
+{while(el.childNodes.length>0)
+el.removeChild(el.lastChild);var optDom=Prado.Element.createOptions(options);for(var i=0;i<optDom.length;i++)
+el.appendChild(optDom[i]);}},createOptions:function(options)
+{var previousGroup=null;var optgroup=null;var result=[];for(var i=0;i<options.length;i++)
+{var option=options[i];if(option.length>2)
+{var group=option[2];if(group!=previousGroup)
+{if(previousGroup!=null&&optgroup!=null)
+{result.push(optgroup);previousGroup=null;optgroup=null;}
+optgroup=document.createElement('optgroup');optgroup.label=group;previousGroup=group;}}
+var opt=document.createElement('option');opt.text=option[0];opt.innerText=option[0];opt.value=option[1];if(optgroup!=null)
+optgroup.appendChild(opt);else
+result.push(opt);}
+if(optgroup!=null)
+result.push(optgroup);return result;},focus:function(element)
 {var obj=$(element);if(typeof(obj)!="undefined"&&typeof(obj.focus)!="undefined")
 setTimeout(function(){obj.focus();},100);return false;},replace:function(element,method,content,boundary)
 {if(boundary)
