@@ -4,6 +4,7 @@ BUG: Ticket#278 - client-side validator enable/disable (conditional) (Wei)
 BUG: Ticket#492 - TDataGridPagerStyle not found error (Qiang)
 BUG: Ticket#517 - Quickstart I18N sample: conflicting module ID (Wei)
 BUG: Ticket#521 - comment tag on TActiveButton stop callback (Wei)
+BUG: Ticket#538 - TActiveListBox doesn't support optgroup (Wei)
 BUG: Ticket#549 - set/get Timestamp on TDatePicker shound handle "null" values (Qiang)
 BUG: Ticket#550 - explicitly include TCallbackClientSide in TCallbackOptions (Qiang)
 BUG: Ticket#553 - I18N quickstart sample does not work (Qiang)
